Update icon button text width to address spacing issue in Chrome; Add ARIA role to About, Profile, and exploration Author profile to offer screenreaders some indication that these are menus; Update delete icon on select input to have icon button text; Remove aria-label from item selection to allow for clearer labels

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -3997,6 +3997,7 @@ md-card.preview-conversation-skin-supplemental-card {
   font-size: 0;
   height: 1px;
   overflow: hidden;
+  width: 0px;
 }
 
 .oppia-activity-summary-tile .recently-updated {
